--- a/vsprops/Externals.props
+++ b/vsprops/Externals.props
@@ -4,7 +4,9 @@
   <PropertyGroup Label="UserMacros">
     <ExternalsDir>$(SolutionDir)externals\</ExternalsDir>
   </PropertyGroup>
-  <PropertyGroup />
+  <PropertyGroup>
+    <_PropertySheetDisplayName>Externals</_PropertySheetDisplayName>
+  </PropertyGroup>
   <ItemDefinitionGroup>
     <ClCompile>
       <AdditionalIncludeDirectories>$(ExternalsDir)glew-1.6.0\include;$(ExternalsDir)glfw-3.0\include;$(ExternalsDir)glm-0.9.3.1;$(ExternalsDir)libjpeg;$(ExternalsDir)qhexedit;$(ExternalsDir)rapidxml-1.13;$(ExternalsDir)sdl-2.0.0\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
@@ -13,8 +15,10 @@
     </ClCompile>
     <Lib />
     <Link>
-      <AdditionalLibraryDirectories>$(ExternalsDir)glew-1.6.0\lib$(PlatformArchitecture);$(ExternalsDir)glfw-3.0\lib$(PlatformArchitecture);$(ExternalsDir)libjpeg;$(ExternalsDir)sdl-2.0.0\lib\$(PlatformName);%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalLibraryDirectories>$(ExternalsDir)glew-1.6.0\lib$(PlatformArchitecture);$(ExternalsDir)glfw-3.0\lib$(PlatformArchitecture)\$(Configuration);$(ExternalsDir)libjpeg;$(ExternalsDir)sdl-2.0.0\lib\$(PlatformName);%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
       <AdditionalDependencies>libjpeg.lib;glfw.lib;opengl32.lib;glew32.lib;glu32.lib;SDL.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <IgnoreSpecificDefaultLibraries>
+      </IgnoreSpecificDefaultLibraries>
     </Link>
     <ProjectReference />
   </ItemDefinitionGroup>
