--- a/vsprops/Optimization_Release.props
+++ b/vsprops/Optimization_Release.props
@@ -32,6 +32,9 @@
     <ClCompile>
       <WholeProgramOptimization>true</WholeProgramOptimization>
     </ClCompile>
+    <Link>
+      <LinkTimeCodeGeneration>UseLinkTimeCodeGeneration</LinkTimeCodeGeneration>
+    </Link>
   </ItemDefinitionGroup>
   <ItemGroup />
 </Project>
